# UOVscheme

./: .gitignore  ASSESSMENT.md  BalanceHypothesis.lean  CentralMap.lean  DualityStructure.lean  MQProblem.lean  OilVinegar.lean  README.md  SchemeCorrectness.lean  SecurityModel.lean  UOV.lean  UOVSecurity.lean  lake-manifest.json  lakefile.lean
.github/workflows/: build.yml  cpp.yml  foundry.yml  lean.yml  pages.yml  python.yml  release.yml  rust.yml
Test/: CentralMapTest.lean  CertificateTest.lean  EUFCTest.lean  GameProbabilityTest.lean  PPTTest.lean  SchemeTest.lean  ToyCoupledTest.lean  ToySecurityTest.lean
UOVscheme/: BalanceHypothesis.lean  CRTBridge.lean  CentralMap.lean  Certificate.lean  CryptoGame.lean  DualityStructure.lean  EUFCMA.lean  GameProbability.lean  MQProblem.lean  SchemeCorrectness.lean  SecurityModel.lean  ToyCoupledGame.lean  ToyCryptoGame.lean  UOV.lean  UOVSecurity.lean
contracts/: README.md  foundry.toml
contracts/cosmos/: README.md
docs/: ASSESSMENT.md  CHAIN_STATE_VERIFICATION_AUDIT.md  DORAHACKS_BUIDL_ALICE_BOB_EVE.md  DORAHACKS_SUBMISSION.md  PQC_NIST_AND_BENCHMARKS.md  README.md
impl/cpp/: CMakeLists.txt  README.md
impl/cpp/include/uov/: central_map.hpp  field.hpp  keygen.hpp  scheme.hpp
impl/cpp/src/: demo.cpp
impl/cpp/tests/: test_correctness.cpp
silent-verify-client/: .env.example  .env.production.example  .env.test.example  .gitignore  README.md  config.ts  next.config.ts  package.json  railway.json
web/: README.md  app.js  index.html  styles.css
web/uov-wasm/: Cargo.toml
web/uov-wasm/src/: lib.rs
(+175 files in other folders)
